--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <table>
   <tbody>
     <tr>
-      <td style="padding:0 0 0 0;"><img src="images/photo.jpg" style="width:300px"/></td>
+      <td style="padding:0 0 0 0;"><img src="images/photo.jpg" style="width:150px"/></td>
       <td style="vertical-align:top; padding: 0 0 0 50px">
         <h1 style="font-size: 35px">
           Bowen Wen
@@ -39,15 +39,15 @@
   </tbody>
 </table>
 
-<table style="margin: 50px 0px;width: 230px">
+<table style="margin: 50px 0px">
   <tr>
-    <td style="width: 50px;height:50px;padding:0 0px 0px 0;"><a href="https://scholar.google.com/citations?user=VSG7Z0kAAAAJ&hl=en&authuser=1"><img src="images/scholar.jpg" width=200px, height=70px /></a>
+    <td style="padding:0 0px 0px 0;"><a href="https://scholar.google.com/citations?user=VSG7Z0kAAAAJ&hl=en&authuser=1"><img src="images/scholar.jpg" width=70px, height=70px /></a>
     </td>
-    <td style="width: 50px;height:50px;padding:0 0px 0px 10px;"><a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fbowen-wen%2F&sa=D&sntz=1&usg=AFQjCNHbDJW-MIEc9Dilkg1V-3jwuuO5cg"><img src="images/linkedin.png" width=200px, height=70px /></a>
+    <td style="padding:0 0px 0px 10px;"><a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fbowen-wen%2F&sa=D&sntz=1&usg=AFQjCNHbDJW-MIEc9Dilkg1V-3jwuuO5cg"><img src="images/linkedin.png" width=70px, height=70px /></a>
     </td>
-    <td style="width: 50px;height:50px;padding:0 0px 0px 10px;"><a href="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fwenbowen123&sa=D&sntz=1&usg=AFQjCNFRNDuGTSEGar53PdBnTSKx0nufDA"><img src="images/github.png" width=200px, height=70px /></a>
+    <td style="padding:0 0px 0px 10px;"><a href="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fwenbowen123&sa=D&sntz=1&usg=AFQjCNFRNDuGTSEGar53PdBnTSKx0nufDA"><img src="images/github.png" width=70px, height=70px /></a>
     </td>
-    <td style="width: 50px;height:50px;padding:0 0px 0px 10px;"><a href="https://www.youtube.com/channel/UCVz7Am0qZOhXDOiY-_waL_g"><img src="images/youtube.png" width=200px, height=70px /></a>
+    <td style="padding:0 0px 0px 10px;"><a href="https://www.youtube.com/channel/UCVz7Am0qZOhXDOiY-_waL_g"><img src="images/youtube.png" width=70px, height=70px /></a>
     </td>
   </tr>
 </table>
