--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <h2>Education</h2>
   <ul>
-  <li>PhD in Computer Science, advised by Kostas Bekris, Rutgers University—​New Brunswick, 2018 - present</li>
+  <li>PhD in Computer Science, advised by Kostas Bekris, Rutgers University-New Brunswick, 2018 - present</li>
 
   <li>MS in Electrical and Computer Engineering, Ohio State University (OSU), advised by Levent Guvenc and Rongjun Qin,
     2016 - 2018</li>
@@ -73,6 +73,7 @@
 
   <h2>News</h2>
   <ul>
+    <li><span class='gray'>[2020/12]</span> I will start my research internship with Google X (the moonshot factory), in summer 2021.</li>
     <li><span class='gray'>[2020/07]</span> One paper accepted to IROS 2020.</li>
     <li><span class='gray'>[2020/07]</span> One paper accepted to RA-L and will also appear in IROS 2020.</li>
     <li><span class='gray'>[2020/03]</span> Our paper "Tools For Data-Driven Modeling Of Within-Hand Manipulation With Underactuated Adaptive Hands" has
