--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
   <h2>Industry Experience</h2>
   <div>
+    <img class="logo_row" src="images/nvidia.png" style="height:30px">
     <img class="logo_row" src="images/x_logo.png" style="height:50px">
     <img class="logo_row" src="images/frl_blue.png" style="height:50px">
     <img class="logo_row" src="images/lab126.png" style="height:40px">
@@ -85,6 +86,7 @@
 
   <h2>News</h2>
   <ul>
+    <li><span class='gray'>[2022/04]</span> Two papers accepted to ICRA 2023.
     <li><span class='gray'>[2022/05]</span> I graduated from PhD and will join <a
         href="https://www.nvidia.com/en-us/research/research-areas/">NVIDIA Research</a> as a Research Scientist.
     <li><span class='gray'>[2022/04]</span> One paper accepted to RSS.
@@ -119,7 +121,7 @@
   </ul>
 
 
-  <h2>Publications</h2>
+  <h2>Selected Publications</h2>
   <table style="width: 1000;margin: 0px 10px">
     <tbody>
       <tr>
@@ -327,20 +329,16 @@
 
     <li>Reviewer for following conferences and journals:
       <ul>
-        <li>IROS (IEEE/RSJ International Conference on Intelligent Robots and Systems) 2020-2022</li>
-
-        <li>ICRA (International Conference on Robotics and Automation) 2019-2022</li>
-
-        <li>RAL (IEEE Robotics and Automation Letters) 2020-2022</li>
-
-        <li>CoRL (Conference on Robot Learning) 2021</li>
-        <li>TPAMI (IEEE Transactions on Pattern Analysis and Machine Intelligence) 2021</li>
-        <li>ISPRS Journal of Photogrammetry and Remote Sensing 2022</li>
-        <li>Neurocomputing 2021</li>
-
-        <li>ICVS (International Conference on Computer Vision Systems) 2021</li>
-
-        <li>IECON (Annual Conference of the IEEE Industrial Electronics Society (IES)) 2021</li>
+        <li>TPAMI (IEEE Transactions on Pattern Analysis and Machine Intelligence)</li>
+        <li>TRO (IEEE Transactions on Robotics)</li>
+        <li>ISPRS Journal of Photogrammetry and Remote Sensing</li>
+        <li>RAL (IEEE Robotics and Automation Letters)</li>
+        <li>ICRA (International Conference on Robotics and Automation)</li>
+        <li>IROS (IEEE/RSJ International Conference on Intelligent Robots and Systems)</li>
+        <li>CoRL (Conference on Robot Learning)</li>
+        <li>Neurocomputing</li>
+        <li>ICVS (International Conference on Computer Vision Systems)</li>
+        <li>IECON (Annual Conference of the IEEE Industrial Electronics Society (IES))</li>
       </ul>
     </li>
 
