--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
   <h2>News</h2>
   <ul>
+    <li><span class='gray'>[2023/02]</span> Two papers accepted to CVPR 2023.
     <li><span class='gray'>[2023/01]</span> Two papers accepted to ICRA 2023.
     <li><span class='gray'>[2022/05]</span> I graduated from PhD and will join <a
         href="https://www.nvidia.com/en-us/research/research-areas/">NVIDIA Research</a> as a Research Scientist.
@@ -97,7 +98,7 @@
         2021.</a> </li>
     <li><span class='gray'>[2021/01]</span> I will start my research internship with Google[X] (the moonshot factory),
       in summer 2021.</li>
-    <li><span class='gray'>[2020/07]</span> One paper accepted to IROS 2020.</li>
+    <!-- <li><span class='gray'>[2020/07]</span> One paper accepted to IROS 2020.</li>
     <li><span class='gray'>[2020/07]</span> One paper accepted to RA-L and will also appear in IROS 2020.</li>
     <li><span class='gray'>[2020/03]</span> Our paper "Tools For Data-Driven Modeling Of Within-Hand Manipulation With
       Underactuated Adaptive Hands" has
@@ -106,7 +107,7 @@
       Adaptive Hands" has been accepted to
       ICRA 2020.</li>
     <li><span class='gray'>[2020/05]</span> I will start my summer Research Intern at Facebook Reality Labs, Redmond,
-      Seattle.</li>
+      Seattle.</li> -->
     <!-- <li><span class='gray'>[2019/10]</span> Our paper Scene-level Pose Estimation for Multiple Instances of Densely
       Packed Objects has been accepted to
       Conference on Robot Learning (CoRL) - 2019 Spotlight.</li>
@@ -337,8 +338,8 @@
         <li>IROS (IEEE/RSJ International Conference on Intelligent Robots and Systems)</li>
         <li>CoRL (Conference on Robot Learning)</li>
         <li>Neurocomputing</li>
-        <li>ICVS (International Conference on Computer Vision Systems)</li>
-        <li>IECON (Annual Conference of the IEEE Industrial Electronics Society (IES))</li>
+        <!-- <li>ICVS (International Conference on Computer Vision Systems)</li>
+        <li>IECON (Annual Conference of the IEEE Industrial Electronics Society (IES))</li> -->
       </ul>
     </li>
 
