remove review request

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </tbody>
   </table>
 
-  <p style="color:red; font-size:20px"><b>Drop me a line if you need a reviewer!</b></p>
+  <!-- <p style="color:red; font-size:20px"><b>Drop me a line if you need a reviewer!</b></p> -->
 
   <table style="margin: 50px 0px">
     <tr>
@@ -71,6 +71,9 @@
       <td style="padding:0 0px 0px 10px;"><a href="https://www.youtube.com/channel/UCVz7Am0qZOhXDOiY-_waL_g"><img
             src="images/youtube.png" width=70px, height=70px /></a>
       </td>
+      <td style="padding:0 0px 0px 10px;"><a href="https://twitter.com/bowenwen_me"><img
+        src="images/twitter.png" width=70px, height=70px /></a>
+  </td>
     </tr>
   </table>
 
@@ -126,13 +129,46 @@
   <table style="width: 1000;margin: 0px 10px">
     <tbody>
       <tr>
+        <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/pumpkin.gif" width=300px,
+            height=150px />
+        </td>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            <span class="myname">Bowen Wen</span>, Jonathan Tremblay, Valts Blukis, Stephen Tyree, Thomas Muller, Alex Evans, Dieter Fox, Jan Kautz, Stan Birchfield
+          </div>
+          <div class="paper_name">
+            BundleSDF: Neural 6-DoF Tracking and 3D Reconstruction of Unknown Objects
+          </div>
+          <div class="conference_name">
+            CVPR 2023
+          </div>
+          <a href="https://arxiv.org/abs/2303.14158">[pdf]</a>
+          <a href="https://github.com/NVlabs/BundleSDF">[code]</a>
+          <a href="https://bundlesdf.github.io/">[project page]</a>
+          <a href="https://www.youtube.com/watch?v=5PymzKbKv8w/">[video]</a>
+          <p>
+            <a class="github-button" href="https://github.com/NVlabs/BundleSDF" data-icon="octicon-star"
+              data-show-count="true" aria-label="Star NVlabs/BundleSDF on GitHub">Star</a>
+            <a class="github-button" href="https://github.com/NVlabs/BundleSDF/fork" data-icon="octicon-repo-forked"
+              data-show-count="true" aria-label="Fork NVlabs/BundleSDF on GitHub">Fork</a>
+          </p>
+        </td>
+      </tr>
+
+      <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/battery_assembly_c.gif" width=300px,
             height=150px />
         </td>
-        <td style="vertical-align:top;font-size: 15px"><b>Bowen Wen</b>, Wenzhao Lian, Kostas Bekris, Stefan Schaal,
-          "You Only Demonstrate Once: Category-Level Manipulation from Single Visual Demonstration",
-          <i>RSS 2022</i>
-          <br>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            <span class="myname">Bowen Wen</span>, Wenzhao Lian, Kostas Bekris, Stefan Schaal
+          </div>
+          <div class="paper_name">
+            You Only Demonstrate Once: Category-Level Manipulation from Single Visual Demonstration
+          </div>
+          <div class="conference_name">
+            RSS 2022
+          </div>
           <b style="color:red">Best Paper Award nomination</b>
           <br>
           <a href="https://arxiv.org/abs/2201.12716">[pdf]</a>
@@ -144,10 +180,16 @@
       <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/catgrasp.jpg" width=300px, height=150px />
         </td>
-        <td style="vertical-align:top;font-size: 15px"><b>Bowen Wen</b>, Wenzhao Lian, Kostas Bekris, Stefan Schaal,
-          "CaTGrasp: Learning Category-Level Task-Relevant Grasping in Clutter from Simulation",
-          <i>ICRA 2022</i>
-          <br>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            <span class="myname">Bowen Wen</span>, Wenzhao Lian, Kostas Bekris, Stefan Schaal
+          </div>
+          <div class="paper_name">
+            CaTGrasp: Learning Category-Level Task-Relevant Grasping in Clutter from Simulation
+          </div>
+          <div class="conference_name">
+            ICRA 2022
+          </div>
           <a href="https://arxiv.org/abs/2109.09163">[pdf]</a>
           <a href="https://sites.google.com/view/catgrasp">[code]</a>
           <a href="https://www.youtube.com/watch?v=rAX-rFSKAto">[video]</a>
@@ -163,10 +205,16 @@
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/finger_gaiting_bunny.gif" width=300px,
             height=150px />
         </td>
-        <td style="vertical-align:top;font-size: 15px">Andrew Morgan*, Kaiyu Hang*, <b>Bowen Wen</b>, Kostas E Bekris,
-          Aaron Dollar, "Complex In-Hand Manipulation via Compliance-Enabled Finger Gaiting and Multi-Modal Planning",
-          <i>IEEE Robotics and Automation Letters 2022</i>
-          <br>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            Andrew Morgan*, Kaiyu Hang*, <span class="myname">Bowen Wen</span>, Kostas E Bekris, Aaron Dollar
+          </div>
+          <div class="paper_name">
+            Complex In-Hand Manipulation via Compliance-Enabled Finger Gaiting and Multi-Modal Planning
+          </div>
+          <div class="conference_name">
+            IEEE Robotics and Automation Letters 2022
+          </div>
           <a href="https://arxiv.org/pdf/2201.07928.pdf">[pdf]</a>
           <a href="https://www.youtube.com/watch?v=6QkRWfFt3RI&t=4s">[video]</a>
           <a
@@ -176,10 +224,16 @@
       <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/stacking.gif" width=300px, height=150px />
         </td>
-        <td style="vertical-align:top;font-size: 15px">Junchi Liang, <b>Bowen Wen</b>, Kostas Bekris, Abdeslam
-          Boularias, "Learning Sensorimotor Primitives of Sequential Manipulation Tasks from Visual Demonstrations",
-          <i>ICRA 2022</i>
-          <br>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            Junchi Liang, <span class="myname">Bowen Wen</span>, Kostas Bekris, Abdeslam Boularias
+          </div>
+          <div class="paper_name">
+            Learning Sensorimotor Primitives of Sequential Manipulation Tasks from Visual Demonstrations
+          </div>
+          <div class="conference_name">
+            ICRA 2022
+          </div>
           <a href="https://arxiv.org/pdf/2203.03797.pdf">[pdf]</a>
           <a href="https://www.youtube.com/watch?v=_UIXKaf_2WU">[video]</a>
       </tr>
@@ -187,10 +241,16 @@
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/vis_scene_1_method_ours_c.gif" width=300px,
             height=150px />
         </td>
-        <td style="vertical-align:top;font-size: 15px"><b>Bowen Wen</b>, Kostas E. Bekris, "BundleTrack: 6D Pose
-          Tracking for Novel Objects without Instance or Category-Level 3D Models",
-          <i>IROS 2021</i>
-          <br>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            <span class="myname">Bowen Wen</span>, Kostas E. Bekris
+          </div>
+          <div class="paper_name">
+          BundleTrack: 6D Pose Tracking for Novel Objects without Instance or Category-Level 3D Models
+          </div>
+          <div class="conference_name">
+            IROS 2021
+          </div>
           <a href="https://arxiv.org/abs/2108.00516">[pdf]</a>
           <a href="https://github.com/wenbowen123/BundleTrack">[code]</a>
           <a href="https://www.youtube.com/watch?v=0UorLR0ADd4">[presentation video]</a>
@@ -208,10 +268,16 @@
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/cup_stacking_and_charger.gif" width=300px,
             height=150px />
         </td>
-        <td style="vertical-align:top;font-size: 15px">Andrew S. Morgan*, <b>Bowen Wen*</b>, Junchi Liang, Abdeslam
-          Boularias, Aaron M. Dollar, Kostas Bekris, "Vision-driven Compliant Manipulation for Reliable, High-Precision
-          Assembly Tasks",
-          <i>RSS 2021</i> <b>(* equal contribution)</b>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            Andrew S. Morgan*, <span class="myname">Bowen Wen*</span>, Junchi Liang, Abdeslam Boularias, Aaron M. Dollar, Kostas Bekris <b style="color:black">(* equal contribution)</b>
+          </div>
+          <div class="paper_name">
+            Vision-driven Compliant Manipulation for Reliable, High-Precision Assembly Tasks
+          </div>
+          <div class="conference_name">
+            RSS 2021
+          </div>
           <br>
           <a href="https://arxiv.org/abs/2106.14070">[pdf]</a>
           <a href="https://www.youtube.com/watch?v=3blr7u3VA7Y&t=40s">[video]</a>
@@ -220,10 +286,16 @@
       <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/se3_tracknet.gif" width=300px, height=150px />
         </td>
-        <td style="vertical-align:top;font-size: 15px"><b>Bowen Wen</b>, Chaitanya Mitash, Baozhang Ren, Kostas E.
-          Bekris, "se(3)-TrackNet: Data-driven 6D Pose Tracking by Calibrating Image Residuals in Synthetic Domains",
-          <i>IROS 2020</i>
-          <br>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            <span class="myname">Bowen Wen</span>, Chaitanya Mitash, Baozhang Ren, Kostas Bekris
+          </div>
+          <div class="paper_name">
+            se(3)-TrackNet: Data-driven 6D Pose Tracking by Calibrating Image Residuals in Synthetic Domains
+          </div>
+          <div class="conference_name">
+            IROS 2020
+          </div>
           <a href="https://arxiv.org/pdf/2007.13866.pdf">[pdf]</a>
           <a href="https://github.com/wenbowen123/iros20-6d-pose-tracking">[code]</a>
           <a href="https://www.youtube.com/watch?v=dhqM0hZmGR4">[supplementary video]</a>
@@ -239,20 +311,32 @@
         </td>
       </tr>
       <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/ral2020.gif" width=300px, height=150px /></td>
-      <td style="vertical-align:top;font-size: 15px">Mitash, Chaitanya, Shome, Rahul, <b>Wen, Bowen</b>, Boularias,
-        Abdeslam, Bekris, Kostas E., "Task-driven Perception and Manipulation for Constrained Placement with No Shape
-        Priors", <i>RA-L and IROS 2020</i>
-        <br>
+      <td style="vertical-align:top;font-size: 15px">
+        <div class="author_name">
+          Mitash, Chaitanya, Shome, Rahul, <span class="myname">Wen, Bowen</span>, Boularias, Abdeslam, Bekris, Kostas
+        </div>
+        <div class="paper_name">
+          Task-driven Perception and Manipulation for Constrained Placement with No Shape Priors
+        </div>
+        <div class="conference_name">
+          RA-L and IROS 2020
+        </div>
         <a href="https://arxiv.org/pdf/2006.15503.pdf">[pdf]</a>
         <a href="https://www.youtube.com/watch?v=uVkn7y3S0sw">[video]</a>
       </td>
       </td>
       <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/icra2020.jpg" width=300px, height=150px /></td>
-        <td style="vertical-align:top;font-size: 15px"><b>Bowen Wen</b>, Chaitanya Mitash, Sruthi Soorian, Andrew
-          Kimmel, Avishai Sintov, Kostas E. Bekris, "Robust, Occlusion-aware Pose Estimation for Objects Grasped by
-          Adaptive Hands", <i>IEEE International Conference on Robotics and Automation (ICRA) 2020</i>
-          <br>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            <span class="myname">Bowen Wen</span>, Chaitanya Mitash, Sruthi Soorian, Andrew Kimmel, Avishai Sintov, Kostas E. Bekris
+          </div>
+          <div class="paper_name">
+            Robust, Occlusion-aware Pose Estimation for Objects Grasped by Adaptive Hands
+          </div>
+          <div class="conference_name">
+            IEEE International Conference on Robotics and Automation (ICRA) 2020
+          </div>
           <a href="https://arxiv.org/pdf/2003.03518.pdf">[pdf]</a>
           <a href="https://github.com/wenbowen123/icra20-hand-object-pose">[code]</a>
           <a href="https://www.youtube.com/watch?v=jCt0-dJAvgI&t=1s">[video]</a>
@@ -266,34 +350,50 @@
           </p>
         </td>
       </tr>
-      <tr>
+      <!-- <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/l4dc2019.jpg" width=300px, height=150px /></td>
-        <td style="vertical-align:top;font-size: 15px">Avishai Sintov, Andrew Kimmel, <b>Bowen Wen</b>, Abdeslam
-          Boularias, Kostas Bekris, "Tools for Data-driven Modeling of Within-Hand Manipulation with Underactuated
-          Adaptive Hands", <i>L4DC
-            (Learning for Dynamics & Control) 2020</i>
-          <br>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            Avishai Sintov, Andrew Kimmel, <span class="myname">Bowen Wen</span>, Abdeslam Boularias, Kostas Bekris
+          </div>
+          <div class="paper_name">
+            "Tools for Data-driven Modeling of Within-Hand Manipulation with Underactuated Adaptive Hands"
+          </div>
+          <div class="conference_name">
+            L4DC (Learning for Dynamics & Control) 2020
+          </div>
           <a href="http://proceedings.mlr.press/v120/sintov20a/sintov20a.pdf">[pdf]</a>
           <a href="https://github.com/avishais/underactuated_hand_tools">[code]</a>
         </td>
-      </tr>
+      </tr> -->
       <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/isrr2019.jpg" width=300px, height=150px /></td>
-        <td style="vertical-align:top;font-size: 15px">Andrew Kimmel, Avishai Sintov, Juntao Tan, <b>Bowen Wen</b>,
-          Abdeslam Boularias, Kostas Bekris, "Belief-Space Planning Using Learned Models With Application To
-          Underactuated Hands",
-          <i>International Symposium on Robotics Research (ISRR) 2019</i>
-          <br>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            Andrew Kimmel, Avishai Sintov, Juntao Tan, <span class="myname">Bowen Wen</span>, Abdeslam Boularias, Kostas Bekris
+          </div>
+          <div class="paper_name">
+            Belief-Space Planning Using Learned Models With Application To Underactuated Hands
+          </div>
+          <div class="conference_name">
+            International Symposium on Robotics Research (ISRR) 2019
+          </div>
           <a href="http://rl.cs.rutgers.edu/publications/ISRR2019.pdf">[pdf]</a>
           <a href="https://www.youtube.com/watch?v=54G5BvEeE8E">[video]</a>
         </td>
       </tr>
       <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/corl2019.jpg" width=300px, height=150px /></td>
-        <td style="vertical-align:top;font-size: 15px">Chaitanya Mitash, <b>Bowen Wen</b>, Kostas Bekris, Abdeslam
-          Boularias, "Scene-level Pose Estimation for Multiple Instances of Densely Packed Objects", <i>Conference on
-            Robot Learning (CoRL) 2019</i>
-          <br>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            Chaitanya Mitash, <span class="myname">Bowen Wen</span>, Kostas Bekris, Abdeslam Boularias
+          </div>
+          <div class="paper_name">
+            Scene-level Pose Estimation for Multiple Instances of Densely Packed Objects
+          </div>
+          <div class="conference_name">
+          Conference on Robot Learning (CoRL) 2019
+          </div>
           <a href="https://arxiv.org/pdf/1910.04953.pdf">[pdf]</a>
           <a href="https://github.com/cmitash/multi-instance-pose-estimation">[code]</a>
           <a href="https://www.youtube.com/watch?v=BN4Q5Gs9xQg">[video]</a>
@@ -302,11 +402,16 @@
 
       <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/adl2018.jpg" width=300px, height=150px /></td>
-        <td style="vertical-align:top;font-size: 15px"><b>Wen, Bowen</b>, Sukru Yaren Gelbal, Bilin Aksun Guvenc, and
-          Levent Guvenc. "Localization and Perception for Control and Decision-Making of a Low-Speed Autonomous Shuttle
-          in a Campus Pilot Deployment." <i>SAE International Journal of Connected and Automated Vehicles 1, no.
-            12-01-02-0003 (2018): 53-66.</i>
-          <br>
+        <td style="vertical-align: top; font-size: 15px; padding-bottom: 10px;">
+          <div class="author_name">
+            <span class="myname">Bowen Wen</span>, Sukru Yaren Gelbal, Bilin Aksun Guvenc, Levent Guvenc
+          </div>
+          <div class="paper_name">
+            Localization and Perception for Control and Decision-Making of a Low-Speed Autonomous Shuttle in a Campus Pilot Deployment.
+          </div>
+          <div class="conference_name">
+            SAE International Journal of Connected and Automated Vehicles 2018
+          </div>
           <a href="https://par.nsf.gov/servlets/purl/10076473">[pdf]</a>
           <a href="https://github.com/wenbowen123/hector_slam_Ceres">[code]</a>
           <a href="https://www.youtube.com/watch?v=LwrdPRxHzrg">[video]</a>
@@ -317,6 +422,7 @@
               data-icon="octicon-repo-forked" data-show-count="true"
               aria-label="Fork wenbowen123/hector_slam_Ceres on GitHub">Fork</a>
           </p>
+        </td>
       </tr>
     </tbody>
   </table>
@@ -330,6 +436,8 @@
 
     <li>Reviewer for following conferences and journals:
       <ul>
+        <li>ICCV</li>
+        <li>NeurIPS</li>
         <li>TPAMI (IEEE Transactions on Pattern Analysis and Machine Intelligence)</li>
         <li>TRO (IEEE Transactions on Robotics)</li>
         <li>ISPRS Journal of Photogrammetry and Remote Sensing</li>
