--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           I am a research scientist at <a href="https://www.nvidia.com/en-us/research/research-areas/">NVIDIA
             Research</a>. My research areas include
           robotic perception, computer vision. Specifically, I work on 3D visual perception and learning to facilitate
-          robotic manipulations. I obtained my PhD degree in Computer Science from Rutgers University in 2022, advised
+          robotics or embodied AI. I obtained my PhD degree in Computer Science from Rutgers University in 2022, advised
           by
           Prof. Kostas Bekris. During my PhD, I've spent wonderful summers with <a
             href="https://x.company/">Google[X]</a>, <a
@@ -52,7 +52,7 @@
     </tbody>
   </table>
 
-  <!-- <p style="color:red; font-size:20px"><b>Drop me a line if you need a reviewer!</b></p> -->
+  <p style="color:red; font-size:17px"><b>I'm always looking for self-motivated research interns. Please email me your CV if you are interested!</b></p>
 
   <table style="margin: 50px 0px">
     <tr>
@@ -89,6 +89,9 @@
 
   <h2>News</h2>
   <ul>
+    <li><span class='gray'>[2024/02]</span> Three papers accepted to CVPR 2024.
+    <li><span class='gray'>[2023/06]</span> One paper accepted to CoRL 2023.
+    <li><span class='gray'>[2023/06]</span> One paper accepted to IROS 2023.
     <li><span class='gray'>[2023/02]</span> Two papers accepted to CVPR 2023.
     <li><span class='gray'>[2023/01]</span> Two papers accepted to ICRA 2023.
     <li><span class='gray'>[2022/05]</span> I graduated from PhD and will join <a
@@ -437,6 +440,8 @@
     <li>Reviewer for following conferences and journals:
       <ul>
         <li>ICCV</li>
+        <li>ECCV</li>
+        <li>ICML</li>
         <li>NeurIPS</li>
         <li>TPAMI (IEEE Transactions on Pattern Analysis and Machine Intelligence)</li>
         <li>TRO (IEEE Transactions on Robotics)</li>
