--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h1 style="font-size: 35px">
             Bowen Wen
           </h1>
-          I am a research scientist at <a href="https://www.nvidia.com/en-us/research/research-areas/">NVIDIA
+          I am a Senior Research Scientist at <a href="https://www.nvidia.com/en-us/research/research-areas/">NVIDIA
             Research</a>. My research areas include
           robotic perception, computer vision. Specifically, I work on 3D visual perception and learning to facilitate
           robotics or embodied AI. I obtained my PhD degree in Computer Science from Rutgers University in 2022, advised
@@ -131,6 +131,59 @@
   <h2>Selected Publications</h2>
   <table style="width: 1000;margin: 0px 10px">
     <tbody>
+      <tr>
+        <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/foundationpose_ar_maze.gif" width=300px,
+            height=150px />
+        </td>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            <span class="myname">Bowen Wen</span>, Wei Yang, Jan Kautz, Stan Birchfield
+          </div>
+          <div class="paper_name">
+            FoundationPose: Unified 6d pose estimation and tracking of novel objects
+          </div>
+          <div class="conference_name">
+            CVPR 2024 <b style="color:red">(Highlight)</b>
+          </div>
+          <a href="https://arxiv.org/abs/2312.08344">[pdf]</a>
+          <a href="https://github.com/NVlabs/FoundationPose">[code]</a>
+          <a href="https://nvlabs.github.io/FoundationPose/">[project page]</a>
+          <p>
+            <a class="github-button" href="https://github.com/NVlabs/FoundationPose" data-icon="octicon-star"
+              data-show-count="true" aria-label="Star NVlabs/FoundationPose on GitHub">Star</a>
+            <a class="github-button" href="https://github.com/NVlabs/FoundationPose/fork" data-icon="octicon-repo-forked"
+              data-show-count="true" aria-label="Fork NVlabs/FoundationPose on GitHub">Fork</a>
+          </p>
+        </td>
+      </tr>
+
+      <tr>
+        <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/artnetf.gif" width=300px,
+            height=150px />
+        </td>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            Yijia Weng, <span class="myname">Bowen Wen</span>, Jonathan Tremblay, Valts Blukis, Dieter Fox, Leonidas Guibas, Stan Birchfield
+          </div>
+          <div class="paper_name">
+            Neural Implicit Representation for Building Digital Twins of Unknown Articulated Objects
+          </div>
+          <div class="conference_name">
+            CVPR 2024
+          </div>
+          <a href="https://arxiv.org/abs/2404.01440">[pdf]</a>
+          <a href="https://github.com/NVlabs/DigitalTwinArt">[code]</a>
+          <a href="https://nvlabs.github.io/DigitalTwinArt/">[project page]</a>
+          <p>
+            <a class="github-button" href="https://github.com/NVlabs/DigitalTwinArt" data-icon="octicon-star"
+              data-show-count="true" aria-label="Star NVlabs/DigitalTwinArt on GitHub">Star</a>
+            <a class="github-button" href="https://github.com/NVlabs/DigitalTwinArt/fork" data-icon="octicon-repo-forked"
+              data-show-count="true" aria-label="Fork NVlabs/DigitalTwinArt on GitHub">Fork</a>
+          </p>
+        </td>
+      </tr>
+
+
       <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/pumpkin.gif" width=300px,
             height=150px />
@@ -369,7 +422,7 @@
           <a href="https://github.com/avishais/underactuated_hand_tools">[code]</a>
         </td>
       </tr> -->
-      <tr>
+      <!-- <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/isrr2019.jpg" width=300px, height=150px /></td>
         <td style="vertical-align:top;font-size: 15px">
           <div class="author_name">
@@ -384,7 +437,8 @@
           <a href="http://rl.cs.rutgers.edu/publications/ISRR2019.pdf">[pdf]</a>
           <a href="https://www.youtube.com/watch?v=54G5BvEeE8E">[video]</a>
         </td>
-      </tr>
+      </tr> -->
+
       <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/corl2019.jpg" width=300px, height=150px /></td>
         <td style="vertical-align:top;font-size: 15px">
@@ -403,7 +457,7 @@
         </td>
       </tr>
 
-      <tr>
+      <!-- <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/adl2018.jpg" width=300px, height=150px /></td>
         <td style="vertical-align: top; font-size: 15px; padding-bottom: 10px;">
           <div class="author_name">
@@ -426,7 +480,7 @@
               aria-label="Fork wenbowen123/hector_slam_Ceres on GitHub">Fork</a>
           </p>
         </td>
-      </tr>
+      </tr> -->
     </tbody>
   </table>
 
