--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <table>
     <tbody>
       <tr>
-        <td style="padding:0 0 0 0"><img src="images/photo.jpg" style="width:150px" /></td>
+        <td style="padding:0 0 0 0"><img src="images/potrait.jpg" style="width:200px" /></td>
         <td style="vertical-align:top; padding: 0 0 0 50px">
           <h1 style="font-size: 35px">
             Bowen Wen
@@ -131,6 +131,32 @@
   <h2>Selected Publications</h2>
   <table style="width: 1000;margin: 0px 10px">
     <tbody>
+      <tr>
+        <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/foundationstereo.gif" width=300px,
+            height=150px />
+        </td>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            <span class="myname">Bowen Wen</span>, Matthew Trepte, Joseph Aribido, Jan Kautz, Orazio Gallo, Stan Birchfield
+          </div>
+          <div class="paper_name">
+            FoundationStereo: Zero-Shot Stereo Matching
+          </div>
+          <div class="conference_name">
+            CVPR 2025</b>
+          </div>
+          <a href="https://arxiv.org/abs/2501.09898">[pdf]</a>
+          <a href="https://github.com/NVlabs/FoundationStereo/">[code]</a>
+          <a href="https://nvlabs.github.io/FoundationStereo/">[project page]</a>
+          <p>
+            <a class="github-button" href="https://github.com/NVlabs/FoundationStereo" data-icon="octicon-star"
+              data-show-count="true" aria-label="Star NVlabs/FoundationPose on GitHub">Star</a>
+            <a class="github-button" href="https://github.com/NVlabs/FoundationStereo/fork" data-icon="octicon-repo-forked"
+              data-show-count="true" aria-label="Fork NVlabs/FoundationPose on GitHub">Fork</a>
+          </p>
+        </td>
+      </tr>
+
       <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/foundationpose_ar_maze.gif" width=300px,
             height=150px />
