--- a/index.html
+++ b/index.html
@@ -29,20 +29,16 @@
             Bowen Wen
           </h1>
           I am a Senior Research Scientist at <a href="https://www.nvidia.com/en-us/research/research-areas/">NVIDIA
-            Research</a>. My research areas include
-          robotic perception, computer vision. Specifically, I work on 3D visual perception and learning to facilitate
-          robotics or embodied AI. I obtained my PhD degree in Computer Science from Rutgers University in 2022, advised
-          by
-          Prof. Kostas Bekris. During my PhD, I've spent wonderful summers with <a
+            Research</a>. My research areas include robotic perception, computer vision. More recently, I focus on large foundation models for 3D visual perception and learning to facilitate robotics or embodied AI. My two leading projects received the best paper award nomination at CVPR 2025 and RSS 2022. I obtained my PhD degree in Computer Science from Rutgers University in 2022, advised
+          by Prof. Kostas Bekris. During my PhD, I've spent wonderful summers with <a
             href="https://x.company/">Google[X]</a>, <a
-            href="https://www.google.com/url?q=https%3A%2F%2Ftech.fb.com%2Far-vr%2F&sa=D&sntz=1&usg=AFQjCNGsqyZqB8hSHF5DQo8i-dgECsIb2w">Facebook
+            href="https://www.google.com/url?q=https%3A%2F%2Ftech.fb.com%2Far-vr%2F&sa=D&sntz=1&usg=AFQjCNGsqyZqB8hSHF5DQo8i-dgECsIb2w">Meta
             Reality Labs</a>, <a
             href="https://www.google.com/url?q=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FAmazon_Lab126&sa=D&sntz=1&usg=AFQjCNFahov2ghvN4ERAVf_8-LkJomzp8w">Amazon
             Lab 126</a>
           and <a
             href="https://www.google.com/url?q=https%3A%2F%2Fwww.sensetime.com%2Fme-en&sa=D&sntz=1&usg=AFQjCNEB2an64fqkUAL3MXUvX4OUHH5JXQ">SenseTime</a>
-          working as a research intern. Previously, I obtained MS degree in ECE from Ohio State University
-          in 2018 and BS degree in Energy and Automation from Xi'an Jiaotong University in 2016.
+          working as a research intern. Prior to my PhD, I obtained MS degree from Ohio State University in 2018 and BS degree from Xi'an Jiaotong University in 2016.
 
           <p><b>Email:</b> wenbowenxjtu [at] gmail [dot] com</p>
 
@@ -72,7 +68,7 @@
             src="images/youtube.png" width=70px, height=70px /></a>
       </td>
       <td style="padding:0 0px 0px 10px;"><a href="https://twitter.com/bowenwen_me"><img
-        src="images/twitter.png" width=70px, height=70px /></a>
+        src="images/x_twitter.webp" width=70px, height=70px /></a>
   </td>
     </tr>
   </table>
@@ -129,7 +125,7 @@
 
 
   <h2>Selected Publications</h2>
-  <table style="width: 1000;margin: 0px 10px">
+  <table style="width: 1000;margin: 0px 0px">
     <tbody>
       <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/foundationstereo.gif" width=300px,
@@ -143,7 +139,7 @@
             FoundationStereo: Zero-Shot Stereo Matching
           </div>
           <div class="conference_name">
-            CVPR 2025</b>
+            CVPR 2025 <b style="color:red">(🏆 Best Paper Nomination)</b>
           </div>
           <a href="https://arxiv.org/abs/2501.09898">[pdf]</a>
           <a href="https://github.com/NVlabs/FoundationStereo/">[code]</a>
@@ -156,6 +152,59 @@
           </p>
         </td>
       </tr>
+
+      <tr>
+        <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/any6d.gif" width=300px,
+            height=150px />
+        </td>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            Taeyeop Lee, <span class="myname">Bowen Wen</span>, Minjun Kang, Gyuree Kang, In So Kweon, Kuk-Jin Yoon
+          </div>
+          <div class="paper_name">
+            Any6D: Model-free 6D Pose Estimation of Novel Objects
+          </div>
+          <div class="conference_name">
+            CVPR 2025
+          </div>
+          <a href="https://arxiv.org/pdf/2503.18673">[pdf]</a>
+          <a href="https://github.com/taeyeopl/Any6D">[code]</a>
+          <a href="http://taeyeop.com/any6d">[project page]</a>
+          <p>
+            <a class="github-button" href="https://github.com/taeyeopl/Any6D" data-icon="octicon-star"
+              data-show-count="true" aria-label="Star NVlabs/FoundationPose on GitHub">Star</a>
+            <a class="github-button" href="https://github.com/taeyeopl/Any6D/fork" data-icon="octicon-repo-forked"
+              data-show-count="true" aria-label="Fork NVlabs/FoundationPose on GitHub">Fork</a>
+          </p>
+        </td>
+      </tr>
+
+      <tr>
+        <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/spot.gif" width=300px,
+            height=150px />
+        </td>
+        <td style="vertical-align:top;font-size: 15px">
+          <div class="author_name">
+            Cheng-Chun Hsu, <span class="myname">Bowen Wen <span class="email_icon"></span></span>, Jie Xu, Yashraj Narang, Xiaolong Wang, Yuke Zhu, Joydeep Biswas, Stan Birchfield <b style="color:black">(<span class="email_icon"></span> project leader)</b>
+          </div>
+          <div class="paper_name">
+            SPOT: SE(3) Pose Trajectory Diffusion for Object-Centric Manipulation
+          </div>
+          <div class="conference_name">
+            ICRA 2025</b>
+          </div>
+          <a href="https://arxiv.org/pdf/2411.00965">[pdf]</a>
+          <a href="https://github.com/NVlabs/object_centric_diffusion">[code]</a>
+          <a href="https://nvlabs.github.io/object_centric_diffusion/">[project page]</a>
+          <p>
+            <a class="github-button" href="https://github.com/NVlabs/object_centric_diffusion" data-icon="octicon-star"
+              data-show-count="true" aria-label="Star NVlabs/FoundationPose on GitHub">Star</a>
+            <a class="github-button" href="https://github.com/NVlabs/object_centric_diffusion/fork" data-icon="octicon-repo-forked"
+              data-show-count="true" aria-label="Fork NVlabs/FoundationPose on GitHub">Fork</a>
+          </p>
+        </td>
+      </tr>
+
 
       <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/foundationpose_ar_maze.gif" width=300px,
@@ -189,7 +238,7 @@
         </td>
         <td style="vertical-align:top;font-size: 15px">
           <div class="author_name">
-            Yijia Weng, <span class="myname">Bowen Wen</span>, Jonathan Tremblay, Valts Blukis, Dieter Fox, Leonidas Guibas, Stan Birchfield
+            Yijia Weng, <span class="myname">Bowen Wen <span class="email_icon"></span></span>, Jonathan Tremblay, Valts Blukis, Dieter Fox, Leonidas Guibas, Stan Birchfield <b style="color:black">(<span class="email_icon"></span> project leader)</b>
           </div>
           <div class="paper_name">
             Neural Implicit Representation for Building Digital Twins of Unknown Articulated Objects
@@ -249,16 +298,15 @@
             You Only Demonstrate Once: Category-Level Manipulation from Single Visual Demonstration
           </div>
           <div class="conference_name">
-            RSS 2022
+            RSS 2022 <b style="color:red">(🏆 Best Paper Nomination)</b>
           </div>
-          <b style="color:red">Best Paper Award nomination</b>
-          <br>
           <a href="https://arxiv.org/abs/2201.12716">[pdf]</a>
           <a href="https://github.com/wenbowen123/BundleTrack">[code of tracking]</a>
           <a href="https://github.com/wenbowen123/catgrasp">[code of grasping]</a>
           <a href="https://www.youtube.com/watch?v=WAr8ZY3mYyw">[video]</a>
         </td>
       </tr>
+
       <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/catgrasp.jpg" width=300px, height=150px />
         </td>
@@ -465,7 +513,7 @@
         </td>
       </tr> -->
 
-      <tr>
+      <!-- <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/corl2019.jpg" width=300px, height=150px /></td>
         <td style="vertical-align:top;font-size: 15px">
           <div class="author_name">
@@ -481,7 +529,7 @@
           <a href="https://github.com/cmitash/multi-instance-pose-estimation">[code]</a>
           <a href="https://www.youtube.com/watch?v=BN4Q5Gs9xQg">[video]</a>
         </td>
-      </tr>
+      </tr> -->
 
       <!-- <tr>
         <td style="width: 200px;padding:0 15px 40px 0;"><img src="images/adl2018.jpg" width=300px, height=150px /></td>
@@ -548,5 +596,20 @@
 
 <p style="text-align: center;font-size: 12px">&copyBowen Wen. All rights reserved</p>
 
+<script>
+  function createEmailIconElement() {
+    const img = document.createElement('img');
+    img.src = 'images/e-mail.svg';
+    img.style.height = '1em';
+    img.style.verticalAlign = 'middle';
+    return img;
+  }
+  document.addEventListener('DOMContentLoaded', function() {
+    document.querySelectorAll('.email_icon').forEach(placeholder => {
+      placeholder.innerHTML = ''; // Clear existing content if any
+      placeholder.appendChild(createEmailIconElement());
+    });
+  });
+</script>
 
 </html>
